enhanced tests and documentation.